Work through chapter 1-4

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <li class="fragment">Desktop: Dropbox,
                                 Automatisierung
                                 <img class="fragment fade-out"
-                                     src="img/dropbox.png" width="30%"/>
+                                     src="img/dropbox.png" width="30%"
                                      style="position:absolute;top:60%;left:65%;">
                             </li>
                             <li class="fragment">Web: Django, Flask
@@ -99,7 +99,7 @@
                 <ul>
                     <li class="fragment">Aufräumen von Fehlentscheidungen</li>
                     <li class="fragment">Python 2.7 ist die letzte Version</li>
-                    <li class="fragment">Python nur noch in Ausnahmefällen</li>
+                    <li class="fragment">Python 2 nur noch in Ausnahmefällen</li>
                 </ul>
             </section>
             <section>
