Add class chapter

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <li class="fragment">Desktop: Dropbox,
                                 Automatisierung
                                 <img class="fragment fade-out"
-                                     src="img/dropbox.png" width="30%"
+                                     src="img/dropbox.png" width="15%"
                                      style="position:absolute;top:60%;left:65%;">
                             </li>
                             <li class="fragment">Web: Django, Flask
@@ -229,7 +229,11 @@
         </section>
         <section>
             <section>
-                <h2>6. Klassen</h2>
+                <h2>
+                    <a href="http://localhost:8888/notebooks/5.%20Klassen.ipynb#Die-super-Funktion">
+                        6. Klassen
+                    </a>
+                </h2>
             </section>
         </section>
         <section>
