Fixes for new run

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </section>
             <section>
 
-                <h2>Python, die Schlage?</h2>
+                <h2>Python, die Schlange?</h2>
                 <div class="fragment fade-out"
                      style="position:absolute;top:80%; left: 20%;"><img
                     height="50%" src="img/schlange.jpg"></div>
@@ -135,10 +135,9 @@
                 <h2> Installation</h2>
 
                 <ul>
-
                     <li class="fragment">
-                        Komfortable Zusammenstellungconda
-                        <a href="https://www.continuum.io/downloads">https://www.continuum.io/downloads</a>
+                        Python 
+                        <a href="https://www.python.org/ftp/python/3.7.0/python-3.7.0-amd64.exe">https://www.python.org/downloads/</a>
                     </li>
                     <li class="fragment">
                         PyCharm
