using spam video

--- a/index.html
+++ b/index.html
@@ -42,11 +42,9 @@
                 <div class="fragment fade-out"
                      style="position:absolute;top:80%; left: 20%;"><img
                     height="50%" src="img/schlange.jpg"></div>
-                <div class="fragment"
-                     style="position:absolute;top:80%;left: 20%">
-                    <iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/moSW6nP3IEA"
-                            frameborder="0" allowfullscreen></iframe>
+                <div class="fragment fade-in"
+                     style="position:absolute;top:80%;left: 25%">
+                     <video src="img/Spam - Monty Python's Flying Circus.mp4" controls=""></video>
                 </div>
             </section>
             <section>
