--- a/index.html
+++ b/index.html
@@ -148,6 +148,16 @@
             </section>
         </section>
         <section>
+            <h2>Für das Selbststudium</h2>
+            <small>
+                <ul>
+                    <li><a href="https://py-tutorial-de.readthedocs.io/de/python-3.3/index.html">https://py-tutorial-de.readthedocs.io/de/python-3.3/index.html</a></ul>
+                    <li><a href="https://www.python-kurs.eu/kurs.php">https://www.python-kurs.eu/kurs.php</a></ul>
+                    <li><a href="https://www.rheinwerk-verlag.de/lets-code-python_4716/">https://www.rheinwerk-verlag.de/lets-code-python_4716/</a></li>
+                </ul>
+            </small>
+        </section>
+        <section>
             <h2><a
                 href="http://localhost:8888/notebooks/1.%20Einfu%CC%88hrung.ipynb#/slide-0-0">2.
                 Erste Schritte</a></h2>
